# repoman

./: .devenv.flake.nix  .gitignore  .tmuxp.yaml  CHANGELOG.md  README.md  devenv.nix  devenv.yaml  flake.nix  pyproject.toml  pytest.ini  repoman.yaml.example
src/repoman/: __init__.py  cli.py  config.py  github.py  manager.py
tests/: conftest.py  test_cli.py  test_config.py  test_github.py  test_integration_e2e.py  test_manager.py
