[project]
name = "repoman"
version = "0.1.0"
description = "Repository manager for NixOS configurations"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
]

[project.scripts]
repoman = "repoman.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers --cov=repoman --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:.*Use `@pytest.mark.asyncio`.*:DeprecationWarning",
]
